# hsync-server

./: .gitignore  hsync-server.cabal
app/: DevelMain.hs  devel.hs  main.hs
config/: api-routes  keter.yml  models  routes  settings.yml  test-settings.yml
src/HSync/Common/: .#StorageTree.hs  AccessPolicy.hs  AcidState.hs  DateTime.hs  FileVersion.hs  Notification.hs  OrphanInstances.hs  Realm.hs  StorageTree.hs  Types.hs  User.hs
src/HSync/Server/: AcidState.hs  Application.hs  Authorization.hs  Foundation.hs  Import.hs  LocalAuth.hs  Model.hs  Notifications.hs  Realm.hs  Settings.hs  Types.hs  User.hs
src/HSync/Server/Handler/: API.hs  AccessPolicy.hs  AcidUtils.hs  Common.hs  FileActions.hs  FileUtils.hs  Home.hs  ManualUpload.hs  Realm.hs  User.hs  ViewTree.hs
src/HSync/Server/Import/: NoFoundation.hs
src/HSync/Server/Settings/: StaticFiles.hs
templates/: about.hamlet  accessItem.hamlet  accessPolicy.hamlet  addAccessPolicyItem.hamlet  default-layout.hamlet  default-layout.lucius  dirInfo.hamlet  jumbotron-layout.hamlet  jumbotron-layout.lucius  lastModified.hamlet  listRealms.hamlet  listUsers.hamlet  loginForm.hamlet  nodeVersions.hamlet  nodeVersions.lucius  nonExistent.hamlet  nonExistent.lucius  register.hamlet  simple-layout.hamlet  userLoggedIn.hamlet  userLoggedIn.lucius  userProfile.hamlet  viewChildren.hamlet  viewChildren.lucius  viewDirectory.hamlet  viewDirectory.lucius  viewDirectoryState.hamlet  viewFile.hamlet  viewFile.lucius  viewNodeData.hamlet  viewNodeData.lucius  webPutDir.hamlet  webPutDir.lucius  webPutFile.hamlet  webPutFile.lucius
