name:              hsync-server
version:           0.2.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: src, app
    exposed-modules: HSync.Server.Application
                     HSync.Server.AcidState
                     HSync.Server.Authorization
                     HSync.Server.Foundation
                     HSync.Server.Import
                     HSync.Server.Import.NoFoundation
                     HSync.Server.LocalAuth
                     HSync.Server.Settings
                     HSync.Server.Settings.StaticFiles
                     HSync.Server.User
                     HSync.Server.Realm
                     HSync.Server.Types

                     HSync.Server.Handler.AccessPolicy
                     HSync.Server.Handler.AcidUtils
                     HSync.Server.Handler.API
                     HSync.Server.Handler.Common
                     HSync.Server.Handler.FileUtils
                     HSync.Server.Handler.Home
                     HSync.Server.Handler.ManualUpload
                     HSync.Server.Handler.Realm
                     HSync.Server.Handler.User

                     HSync.Common.API
                     HSync.Common.AcidState
                     HSync.Common.AccessPolicy
                     HSync.Common.DateTime
                     HSync.Common.FileVersion
                     HSync.Common.Header
                     HSync.Common.Realm
                     HSync.Common.StorageTree
                     HSync.Common.Types
                     HSync.Common.User
                     HSync.Common.Util
                     HSync.Common.OrphanInstances
                     -- HSync.Common.Zip


    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                AutoDeriveTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 -- , persistent                    >= 2.0        && < 2.2
                 -- , persistent-sqlite             >= 2.1.1      && < 2.2
                 -- , persistent-template           >= 2.0        && < 2.2
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.4
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed

                 , mtl                           >= 2.1
                 , transformers                  >= 0.4
                 , lens                          >= 4
                 , acid-state                    >= 0.12
                 , ixset                         >= 1.0.6
                 , safecopy
                 , semigroups                    >= 0.15
                 , lifted-base                   >= 0.2
                 , blaze-markup                  >= 0.7
                 , cryptonite                    >= 0.5

                 , crypto-conduit                >= 0.5.5
                 , cryptohash-cryptoapi
                 , cereal
                 , filepath                      >= 1.4.0.0
                 , random                        >= 1.1

                 , safe
                 , unordered-containers
                 , containers
                 , vector                        >= 0.10    && < 0.11
                 , time
                 , http-types                    >= 0.8     && < 0.9
                 , case-insensitive              >= 1.2     && < 1.3
                 -- , zip-conduit                   >= 0.2


executable         hsync-server
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, hsync-server

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , hsync-server
                 , yesod-test >= 1.4.3 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
