name:              hsync-server
version:           0.2.0.0
cabal-version:     >= 1.10
build-type:        Simple
homepage:          https://fstaals.net/software/hsync
license:           BSD3
license-file:      LICENSE
author:            Frank Staals
maintainer:        frank@fstaals.net
category:          Network

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: src, app
    exposed-modules: HSync.Server.Application
                     HSync.Server.AcidState
                     HSync.Server.Authorization
                     HSync.Server.Foundation
                     HSync.Server.Import
                     HSync.Server.Import.NoFoundation
                     HSync.Server.LocalAuth
                     HSync.Server.Notifications
                     HSync.Server.Settings
                     HSync.Server.Settings.StaticFiles
                     HSync.Server.User
                     HSync.Server.Realm
                     HSync.Server.Types

                     HSync.Server.Handler.AccessPolicy
                     HSync.Server.Handler.AcidUtils
                     HSync.Server.Handler.API
                     HSync.Server.Handler.Common
                     HSync.Server.Handler.FileUtils
                     HSync.Server.Handler.Home
                     HSync.Server.Handler.ManualUpload
                     HSync.Server.Handler.Realm
                     HSync.Server.Handler.User



    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    Default-language:    Haskell2010

    default-extensions: TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        CPP
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        DeriveDataTypeable
                        AutoDeriveTypeable
                        ViewPatterns
                        LambdaCase
                        TupleSections
                        RecordWildCards

    build-depends: base                          >= 4          && < 5
                 , hsync-common                  >= 0.2.0.0    && < 0.3

                 , yesod                         >= 1.4.1
                 , yesod-core                    >= 1.4.6
                 , yesod-auth                    >= 1.4.0
                 , yesod-static                  >= 1.4.0.3
                 , yesod-form                    >= 1.4.0
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9
                 , text                          >= 0.11
                 -- , persistent                    >= 2.0        && < 2.2
                 -- , persistent-sqlite             >= 2.1.1      && < 2.2
                 -- , persistent-template           >= 2.0        && < 2.2
                 , template-haskell
                 , shakespeare                   >= 2.0
                 , hjsmin                        >= 0.1
                 , monad-control                 >= 0.3
                 , wai-extra                     >= 3.0
                 , yaml                          >= 0.8
                 , http-conduit                  >= 2.1
                 , directory                     >= 1.1
                 , warp                          >= 3.0
                 , data-default
                 , aeson                         >= 0.6
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 2.2
                 , wai-logger                    >= 2.2
                 , file-embed

                 , stm                           >= 2.4
                 , mtl                           >= 2.1
                 , transformers                  >= 0.4
                 , lens                          >= 4
                 , acid-state                    >= 0.12
                 , ixset                         >= 1.0.6
                 , safecopy                      >= 0.8.5
                 , semigroups                    >= 0.15
                 , lifted-base                   >= 0.2
                 , blaze-markup                  >= 0.7
                 , cryptonite                    >= 0.5

                 , crypto-conduit                >= 0.5.5
                 , cryptohash-cryptoapi
                 , cereal
                 , filepath                      >= 1.4.0.0
                 , random                        >= 1.1
                 , bimap                         >= 0.3

                 , safe
                 , unordered-containers
                 , containers
                 , vector                        >= 0.10
                 , time
                 , http-types                    >= 0.8
                 , case-insensitive              >= 1.2
                 -- , zip-conduit                   >= 0.2


executable         hsync-server
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, hsync-server

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    default-extensions: TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        CPP
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        DeriveDataTypeable
                        ViewPatterns
                        TupleSections

    build-depends: base
                 , hsync-server
                 , yesod-test >= 1.4.3 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
